feat: full swagger docs with types/models
